--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ https://templatemo.com/tm-536-dream-pulse
               <div class="col-xl-6">
                 <div class="tm-section-half">    
                     <div><i class=""></i></div>                        
-                    <h2 class="tm-section-title tm-color-primary mb-5">About Us</h2>
+                    <h2 class="tm-section-title tm-color-primary mb-5">About</h2>
                     <p class="mb-5">
                       কিভাবে আপনার অনলাইন উপার্জনকে সহজ এবং কার্যকরী করা যায় এবং কিভাবে এখন ফ্রিল্যান্সিং এর মাধ্যমে অর্থ উপার্জন করা যায় এবং আপনার দৈনন্দিন অনলাইন সম্পর্কিত সমস্যার সমাধান করা যায়, আমাদের ভিডিও দেখুন এবং আমাদের চ্যানেলটি সাবস্ক্রাইব করুন এবং আমাদের সাথে সংযুক্ত থাকুন।  
                     </p>
@@ -200,7 +200,7 @@ https://templatemo.com/tm-536-dream-pulse
                 <div class="col-xl-6 mb-5">
                   <div class="tm-double-border-1 tm-border-gray">
                     <div class="tm-double-border-2 tm-border-gray tm-box-pad">
-                        <h2 class="tm-color-primary tm-section-title mb-4">Talk to Us</h2>
+                        <h2 class="tm-color-primary tm-section-title mb-4">Contract</h2>
                         <p class="mb-4">
                       আপনাদের যে কোন সমস্যা সমাধানের জন্য আমাদের সাথে যোগাযোগ করতে পারেন৷ এবং যদি আপনার কোন প্রমোশনের জন্য একটি সত্যিকারের মাধ্যম বা প্ল্যাটফর্মের প্রয়োজন হয়, আমার ব্যবসায়িক মেইলে যোগাযোগ করার জন্য- MRrazuofficialhelp@gmail.com
                         </p>
