--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="google-site-verification" content="TpKytf8gsxauakN0ep_l6POUSj-sDVubfwbrrRZX1cY" />
 
-    <title>MR razu official website</title>
+    <title>MR razu official Website, How to make your online earning easy and effective and how to make money now through freelancing and solve your daily online related problems, watch our video and subscribe to our channel and stay connected with us.</title>
 <!--
 MR RAZU OFFICIAL
 https://mrrazuofficial.top
