--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@ https://mrrazuofficial.top
                 </div>
               </section>
           </div>
-        </main>        
+        </main> 
+       <center><a href="https://www.control.putulhost.com/aff.php?aff=1019"><img src="http://www.is.gd/US0hfl" width="360" height="100" border="0"></a></center>       
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
