--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@ https://mrrazuofficial.top
                   </div>                 
                 </div>
               </section>
-            <center><a href="https://www.control.putulhost.com/aff.php?aff=1019"><img src="http://www.is.gd/US0hfl" width="360" height="80" border="0"></a></center>
+            <center><a href="https://www.control.putulhost.com/aff.php?aff=1019"><img src="http://www.is.gd/US0hfl" width="360" height="60" border="0"></a></center>
+           </div>
           </div>
         </main>        
       </div>
